--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
         android:icon="@drawable/ic_launcher"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".StandOutExampleActivity"
+            android:name=".StandOutActivity"
             android:excludeFromRecents="true"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.NoDisplay" >
@@ -18,8 +18,13 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".MultiWindow" >
+        <service android:name=".FloatingWindow" >
         </service>
+        <provider
+            android:name=".ShoppingListContentProvider"
+            android:authorities="ru.zzsdeo.smsshoppinglist.contentprovider"
+            android:exported="false" >
+        </provider>
     </application>
 
 </manifest>
