--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,13 +1,17 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="ru.zzsdeo.smsshoppinglist">
+    package="ru.zzsdeo.smsshoppinglist" >
+
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
+    <uses-permission android:name="android.permission.READ_SMS"/>
 
     <application
         android:allowBackup="true"
-        android:label="@string/app_name"
         android:icon="@drawable/ic_launcher"
-        android:theme="@style/AppTheme">
+        android:label="@string/app_name"
+        android:theme="@style/AppTheme" >
         <activity
-            android:name=".StandOutActivity"
+            android:name="ru.zzsdeo.smsshoppinglist.StandOutActivity"
             android:excludeFromRecents="true"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.NoDisplay" >
@@ -18,19 +22,43 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".SettingsActivity"
-            android:label="@string/settings"/>
+            android:name="ru.zzsdeo.smsshoppinglist.SettingsActivity"
+            android:label="@string/settings" />
         <activity
-            android:name=".ProductsActivity"
-            android:label="@string/manage_autocomplete"/>
+            android:name="ru.zzsdeo.smsshoppinglist.ProductsActivity"
+            android:label="@string/manage_autocomplete" >
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
 
-        <service android:name=".FloatingWindow" >
+            <meta-data
+                android:name="android.app.default_searchable"
+                android:value=".ProductsActivity" />
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
+        </activity>
+
+        <service
+            android:name="ru.zzsdeo.smsshoppinglist.FloatingWindow" >
         </service>
+
+        <service
+            android:name=".SmsParser" >
+        </service>
+
         <provider
-            android:name=".ShoppingListContentProvider"
+            android:name="ru.zzsdeo.smsshoppinglist.ShoppingListContentProvider"
             android:authorities="ru.zzsdeo.smsshoppinglist.contentprovider"
             android:exported="false" >
         </provider>
+
+        <receiver
+            android:name="ru.zzsdeo.smsshoppinglist.SmsReceiver">
+            <intent-filter>
+                <action android:name="android.provider.Telephony.SMS_RECEIVED" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
