--- a/standOut/build.gradle
+++ b/standOut/build.gradle
@@ -5,14 +5,14 @@ android {
     buildToolsVersion "19.1.0"
 
     defaultConfig {
-        applicationId "wei.mark.standout"
+        //applicationId "wei.mark.standout"
         minSdkVersion 7
         targetSdkVersion 15
     }
 
     buildTypes {
         release {
-            runProguard false
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
