--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,11 @@
     <uses-permission android:name="android.permission.READ_SMS" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <permission android:name="com.example.gcm.permission.C2D_MESSAGE"
+        android:protectionLevel="signature" />
+    <uses-permission android:name="ru.zzsdeo.smsshoppinglist.permission.C2D_MESSAGE" />
 
     <application
         android:name=".SmsShoppingList"
@@ -13,6 +18,8 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <meta-data android:name="com.google.android.gms.version"
+                   android:value="@integer/google_play_services_version" />
         <activity
             android:name="ru.zzsdeo.smsshoppinglist.StandOutActivity"
             android:excludeFromRecents="true"
@@ -52,6 +59,8 @@
         </service>
         <service android:name="ru.zzsdeo.smsshoppinglist.SmsParser" >
         </service>
+        <service android:name="ru.zzsdeo.smsshoppinglist.GcmIntentService" >
+        </service>
 
         <provider
             android:name="ru.zzsdeo.smsshoppinglist.ShoppingListContentProvider"
@@ -62,6 +71,15 @@
         <receiver android:name="ru.zzsdeo.smsshoppinglist.SmsReceiver" >
             <intent-filter>
                 <action android:name="android.provider.Telephony.SMS_RECEIVED" />
+            </intent-filter>
+        </receiver>
+        <receiver
+            android:name=".GcmBroadcastReceiver"
+            android:permission="com.google.android.c2dm.permission.SEND" >
+            <intent-filter>
+                <!-- Receives the actual messages. -->
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                <category android:name="ru.zzsdeo.smsshoppinglist" />
             </intent-filter>
         </receiver>
     </application>
