--- a/standOut/build.gradle
+++ b/standOut/build.gradle
@@ -1,19 +1,21 @@
 apply plugin: 'com.android.library'
-
 android {
     compileSdkVersion 7
-    buildToolsVersion "19.1.0"
-
+    buildToolsVersion '21.1.2'
     defaultConfig {
         //applicationId "wei.mark.standout"
         minSdkVersion 7
-        targetSdkVersion 15
+        targetSdkVersion 21
     }
-
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
+    productFlavors {
+    }
+}
+
+dependencies {
 }
